--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -43,11 +43,11 @@ jobs:
           ZSCALER_CIDR1: ${{ secrets.ZSCALER_CIDR1 }}
           ZSCALER_CIDR2: ${{ secrets.ZSCALER_CIDR2 }}
         run: |
-          GKE_CLUSTER=tf-provider-xray-$(date +%s)
+          export GKE_CLUSTER=tf-provider-xray-$(date +%s)
           echo "GKE_CLUSTER=$GKE_CLUSTER" >> "$GITHUB_ENV"
           echo "gke_cluster=$GKE_CLUSTER" >> "$GITHUB_OUTPUT"
           echo "Whitelist Pipelines Node CIDR to be able to run Artifactory and Xray tests. Same variable is used in gke/create_cluster step to restrict access to the control plane."
-          WHITELIST_CIDR=$(curl ifconfig.me)/32
+          export WHITELIST_CIDR=$(curl ifconfig.me)/32
           echo "WHITELIST_CIDR=$WHITELIST_CIDR" >> "$GITHUB_ENV"
           chmod +x ./scripts/create_gke_cluster.sh
           ./scripts/create_gke_cluster.sh
