--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -37,9 +37,9 @@ jobs:
         env:
           GKE_ZONE: ${{ vars.GKE_ZONE }}
           GKE_PROJECT: ${{ vars.GKE_PROJECT }}
+          GKE_SERVICE_ACCOUNT_JSON: ${{ secrets.GKE_SERVICE_ACCOUNT_JSON }}
           MACHINE_TYPE: ${{ vars.GKE_MACHINE_TYPE }}
           NUM_NODES: ${{ vars.GKE_NUM_NODES }} # default is 3
-          SERVICE_ACCOUNT_JSON: ${{ secrets.GKE_SERVICE_ACCOUNT_JSON }}
           ZSCALER_CIDR1: ${{ secrets.ZSCALER_CIDR1 }}
           ZSCALER_CIDR2: ${{ secrets.ZSCALER_CIDR2 }}
         run: |
@@ -49,6 +49,9 @@ jobs:
           echo "Whitelist Pipelines Node CIDR to be able to run Artifactory and Xray tests. Same variable is used in gke/create_cluster step to restrict access to the control plane."
           export WHITELIST_CIDR=$(curl ifconfig.me)/32
           echo "WHITELIST_CIDR=$WHITELIST_CIDR" >> "$GITHUB_ENV"
+          echo "Creating GKE service account JSON file"
+          export SERVICE_ACCOUNT_JSON=${{ runner.temp }}/jfrog-partnership-team.json
+          echo $GKE_SERVICE_ACCOUNT_JSON > $SERVICE_ACCOUNT_JSON
           chmod +x ./scripts/create_gke_cluster.sh
           ./scripts/create_gke_cluster.sh
       - name: Get Artifactory and Xray versions
