--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -94,9 +94,9 @@ jobs:
       - name: Get URL
         id: get_jfrog_url
         run: |
-          JFROG_URL=$(kubectl get svc artifactory-artifactory-nginx -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
-          echo "JFROG_URL=http://$JFROG_URL" >> "$GITHUB_ENV"
-          echo "url=http://$JFROG_URL" >> "$GITHUB_OUTPUT"
+          SERVICE_IP=$(kubectl get svc artifactory-artifactory-nginx -o jsonpath='***.status.loadBalancer.ingress[0].ip***')
+          echo "JFROG_URL=http://$SERVICE_IP" >> "$GITHUB_ENV"
+          echo "url=http://$SERVICE_IP" >> "$GITHUB_OUTPUT"
       - name: Get access token
         id: get_access_token
         run: |
