--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -101,14 +101,14 @@ jobs:
         id: get_access_token
         run: |
           echo "Get cookie to generate Access token"
-          export COOKIES=$(curl -s -c - "${JFROG_URL}/ui/api/v1/ui/auth/login?_spring_security_remember_me=false" \
+          COOKIES=$(curl -s -c - "${JFROG_URL}/ui/api/v1/ui/auth/login?_spring_security_remember_me=false" \
             --header "accept: application/json, text/plain, */*" \
             --header "content-type: application/json;charset=UTF-8" \
             --header "x-requested-with: XMLHttpRequest" \
             -d '{"user":"admin","password":"'"${{ secrets.ARTIFACTORY_PASSWORD }}"'","type":"login"}' | grep FALSE)
-          export REFRESHTOKEN=$(echo $COOKIES | grep REFRESHTOKEN | awk '{print $7}')
-          export ACCESSTOKEN=$(echo $COOKIES | grep ACCESSTOKEN | awk '{print $14}')
-          export JFROG_ACCESS_TOKEN=$(curl -s -g --request GET "${JFROG_URL}/ui/api/v1/system/security/token?services[]=all" \
+          REFRESHTOKEN=$(echo $COOKIES | grep REFRESHTOKEN | awk '{print $7}')
+          ACCESSTOKEN=$(echo $COOKIES | grep ACCESSTOKEN | awk '{print $14}')
+          JFROG_ACCESS_TOKEN=$(curl -s -g --request GET "${JFROG_URL}/ui/api/v1/system/security/token?services[]=all" \
             --header "accept: application/json, text/plain, */*" \
             --header "x-requested-with: XMLHttpRequest" \
             --header "cookie: ACCESSTOKEN=${ACCESSTOKEN}; REFRESHTOKEN=${REFRESHTOKEN}")
@@ -199,6 +199,7 @@ jobs:
 
   cleanup-gke-cluster:
     runs-on: ubuntu-latest
+    environment: development
     needs: [create-gke-cluster, acceptance-tests-matrix]
     if: always() && needs.create-gke-cluster.result == 'success'
     steps:
@@ -213,8 +214,11 @@ jobs:
           GKE_ZONE: ${{ vars.GKE_ZONE }}
           GKE_PROJECT: ${{ vars.GKE_PROJECT }}
           GKE_CLUSTER: ${{ needs.create-gke-cluster.outputs.gke_cluster }}
-          SERVICE_ACCOUNT_JSON: ${{ secrets.GKE_SERVICE_ACCOUNT_JSON }}
+          GKE_SERVICE_ACCOUNT_JSON: ${{ secrets.GKE_SERVICE_ACCOUNT_JSON }}
         run: |
+          echo "Creating GKE service account JSON file"
+          export SERVICE_ACCOUNT_JSON=${{ runner.temp }}/jfrog-partnership-team.json
+          echo $GKE_SERVICE_ACCOUNT_JSON > $SERVICE_ACCOUNT_JSON
           chmod +x ./scripts/delete_cluster.sh
           ./scripts/delete_cluster.sh
 
