--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -18,7 +18,6 @@ jobs:
       artifactory_version: ${{ steps.get_versions.outputs.rt_version }}
       xray_version: ${{ steps.get_versions.outputs.xray_version }}
       jfrog_url: ${{ steps.get_jfrog_url.outputs.url }}
-      jfrog_access_token: ${{ steps.get_access_token.outputs.access_token }}
     steps:
       - name: Install Helm
         uses: azure/setup-helm@v4.2.0
@@ -99,23 +98,6 @@ jobs:
           echo "JFROG_URL=$JFROG_URL" >> "$GITHUB_ENV"
           echo $JFROG_URL
           echo "url=$JFROG_URL" >> "$GITHUB_OUTPUT"
-      - name: Get access token
-        id: get_access_token
-        run: |
-          echo "Get cookie to generate Access token"
-          COOKIES=$(curl -s -c - "${JFROG_URL}/ui/api/v1/ui/auth/login?_spring_security_remember_me=false" \
-            --header "accept: application/json, text/plain, */*" \
-            --header "content-type: application/json;charset=UTF-8" \
-            --header "x-requested-with: XMLHttpRequest" \
-            -d '{"user":"admin","password":"'"${{ secrets.ARTIFACTORY_PASSWORD }}"'","type":"login"}' | grep FALSE)
-          REFRESHTOKEN=$(echo $COOKIES | grep REFRESHTOKEN | awk '{print $7}')
-          ACCESSTOKEN=$(echo $COOKIES | grep ACCESSTOKEN | awk '{print $14}')
-          JFROG_ACCESS_TOKEN=$(curl -s -g --request GET "${JFROG_URL}/ui/api/v1/system/security/token?services[]=all" \
-            --header "accept: application/json, text/plain, */*" \
-            --header "x-requested-with: XMLHttpRequest" \
-            --header "cookie: ACCESSTOKEN=${ACCESSTOKEN}; REFRESHTOKEN=${REFRESHTOKEN}")
-          echo "::add-mask::$JFROG_ACCESS_TOKEN"
-          echo "access_token=$JFROG_ACCESS_TOKEN" >> "$GITHUB_OUTPUT"
 
   acceptance-tests-matrix:
     name: ${{ matrix.cli }}
@@ -167,10 +149,26 @@ jobs:
         uses: goreleaser/goreleaser-action@v6
         with:
           install-only: true
+      - name: Get access token
+        id: get_access_token
+        run: |
+          echo "Get cookie to generate Access token"
+          COOKIES=$(curl -s -c - "${JFROG_URL}/ui/api/v1/ui/auth/login?_spring_security_remember_me=false" \
+            --header "accept: application/json, text/plain, */*" \
+            --header "content-type: application/json;charset=UTF-8" \
+            --header "x-requested-with: XMLHttpRequest" \
+            -d '{"user":"admin","password":"'"${{ secrets.ARTIFACTORY_PASSWORD }}"'","type":"login"}' | grep FALSE)
+          REFRESHTOKEN=$(echo $COOKIES | grep REFRESHTOKEN | awk '{print $7}')
+          ACCESSTOKEN=$(echo $COOKIES | grep ACCESSTOKEN | awk '{print $14}')
+          JFROG_ACCESS_TOKEN=$(curl -s -g --request GET "${JFROG_URL}/ui/api/v1/system/security/token?services[]=all" \
+            --header "accept: application/json, text/plain, */*" \
+            --header "x-requested-with: XMLHttpRequest" \
+            --header "cookie: ACCESSTOKEN=${ACCESSTOKEN}; REFRESHTOKEN=${REFRESHTOKEN}")
+          echo "::add-mask::$JFROG_ACCESS_TOKEN"
+          echo "JFROG_ACCESS_TOKEN=$JFROG_ACCESS_TOKEN" >> "$GITHUB_ENV"
       - name: Execute acceptance tests
         env:
           JFROG_URL: ${{ needs.create-gke-cluster.outputs.jfrog_url }}
-          JFROG_ACCESS_TOKEN: ${{ needs.create-gke-cluster.outputs.jfrog_access_token }}
         run: make acceptance -e TARGET_ARCH=linux_amd64
       - name: Install provider
         run: |
