--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -153,15 +153,13 @@ jobs:
         id: get_access_token
         env:
           JFROG_URL: ${{ needs.create-gke-cluster.outputs.jfrog_url }}
-          ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
         run: |
           echo "Get cookie to generate Access token"
-          echo "::add-mask::$ARTIFACTORY_PASSWORD"
           COOKIES=$(curl -s -c - "${JFROG_URL}/ui/api/v1/ui/auth/login?_spring_security_remember_me=false" \
             --header "accept: application/json, text/plain, */*" \
             --header "content-type: application/json;charset=UTF-8" \
             --header "x-requested-with: XMLHttpRequest" \
-            -d '{"user":"admin","password":"$ARTIFACTORY_PASSWORD","type":"login"}' | grep FALSE)
+            -d '{"user":"admin","password":"${{ secrets.ARTIFACTORY_PASSWORD }}","type":"login"}' | grep FALSE)
           REFRESHTOKEN=$(echo $COOKIES | grep REFRESHTOKEN | awk '{print $7}')
           ACCESSTOKEN=$(echo $COOKIES | grep ACCESSTOKEN | awk '{print $14}')
           JFROG_ACCESS_TOKEN=$(curl -s -g --request GET "${JFROG_URL}/ui/api/v1/system/security/token?services[]=all" \
