--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -51,8 +51,21 @@ jobs:
           echo "Creating GKE service account JSON file"
           export SERVICE_ACCOUNT_JSON=${{ runner.temp }}/jfrog-partnership-team.json
           echo $GKE_SERVICE_ACCOUNT_JSON > $SERVICE_ACCOUNT_JSON
-          chmod +x ./scripts/create_gke_cluster.sh
-          ./scripts/create_gke_cluster.sh
+          echo "Authenticating with service account JSON file"
+          gcloud auth activate-service-account --key-file="$SERVICE_ACCOUNT_JSON"
+          echo "Creating GKE cluster ${GKE_CLUSTER} using default authentication"
+          gcloud container clusters create "$GKE_CLUSTER" --zone "$GKE_ZONE" \
+            --cluster-version 1.28.11 \
+            --node-locations "$GKE_ZONE" --num-nodes "${NUM_NODES:-5}" --enable-autoscaling \
+            --machine-type "$MACHINE_TYPE" \
+            --disk-size 50Gi \
+            --min-nodes 1 --max-nodes 5 --project "$GKE_PROJECT" \
+            --enable-master-authorized-networks \
+            --master-authorized-networks "$ZSCALER_CIDR1","$ZSCALER_CIDR2","$WHITELIST_CIDR"
+            # add your NAT CIDR to whitelist local or CI/CD NAT IP. Set WHITELIST_CIDR in CI/CD to add CIDR to the list automatically.
+          gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE" --project "$GKE_PROJECT"
+          # chmod +x ./scripts/create_gke_cluster.sh
+          # ./scripts/create_gke_cluster.sh
       - name: Get Artifactory and Xray versions
         id: get_versions
         run: |
@@ -80,14 +93,14 @@ jobs:
           echo "::add-mask::$JOIN_KEY"
           echo "JOIN_KEY=$JOIN_KEY" >> "$GITHUB_ENV"
           helm upgrade --install artifactory jfrog/artifactory \
-            --set shared.database.allowNonPostgresql=true \
             --set artifactory.masterKey=$MASTER_KEY \
             --set artifactory.joinKey=$JOIN_KEY \
             --set artifactory.license.secret=artifactory-license \
             --set artifactory.license.dataKey=artifactory.cluster.license \
             --set artifactory.persistence.size=50Gi \
             --set nginx.service.ssloffload=true \
-            --set nginx.service.loadBalancerSourceRanges="{$ZSCALER_CIDR1,$ZSCALER_CIDR2,$WHITELIST_CIDR}"
+            --set nginx.service.loadBalancerSourceRanges="{$ZSCALER_CIDR1,$ZSCALER_CIDR2,$WHITELIST_CIDR}" \
+             --set postgresql.persistence.size=50Gi
           echo "Waiting for Artifactory roll out"
           kubectl rollout status deployment/artifactory-artifactory-nginx
           kubectl rollout status statefulset/artifactory
